--- a/casino/index.html
+++ b/casino/index.html
@@ -97,7 +97,6 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,syste
 .footer{text-align:center;color:#9a9a9a;font-size:12px;padding:18px 14px 26px}
 small.muted{color:#9a9a9a}
 
-
 /* 88 logo spotlight */
 .logoImg, .logo-img{
   width:min(170px,52vw) !important;
@@ -151,7 +150,7 @@ small.muted{color:#9a9a9a}
       그 외 계정은 사칭일 수 있으니<br/>
       반드시 주의해 주세요.
     </p>
-<div class="btn" data-x="xYNKds7BgUb4">확인</div>
+<div class="btn" data-d8593ac4d="VQkTbQtZrbr_">확인</div>
 </div>
 </div>
 <div class="wrap st-guide" role="main">
@@ -162,7 +161,7 @@ small.muted{color:#9a9a9a}
 <div class="st-guide-actions">
 <a class="btn primary" href="/analysis/">분석기</a>
 <a class="btn secondary" href="/bonus-checklist/">입플 체크리스트</a>
-<a class="btn ghost" href="https://t.me/UZU59" rel="noopener" target="_blank">문의</a>
+<a class="btn ghost" href="https://t.me/UZU59" rel="noopener noreferrer" target="_blank">문의</a>
 </div>
 </div>
 <div class="grid2">
@@ -181,7 +180,7 @@ small.muted{color:#9a9a9a}
       </div>
 <div class="btnRow">
 <a class="btn blue" href="/analysis/">분석기(마진/EV)</a>
-<a class="btn gold" href="https://t.me/UZU59" rel="noopener" target="_blank">문의(텔레그램)</a>
+<a class="btn gold" href="https://t.me/UZU59" rel="noopener noreferrer" target="_blank">문의(텔레그램)</a>
 </div>
 </div>
 <div class="card">
@@ -231,6 +230,6 @@ small.muted{color:#9a9a9a}
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
