--- a/cert/index.html
+++ b/cert/index.html
@@ -16,7 +16,6 @@
 
   <link rel="stylesheet" href="/assets/88st-cert.css?v=VIP4_20260214_17"/>
 
-  <!-- common shell + analytics -->
   <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
   <script defer src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
 </head>
@@ -36,7 +35,7 @@
           <div class="cert-actions">
             <a class="cert-btn primary" href="#certList">카드 목록 보기 →</a>
             <a class="cert-btn" href="/bonus-checklist/">입플 체크리스트</a>
-            <a class="cert-btn" href="https://t.me/UZU59" target="_blank" rel="noopener">문의 (텔레그램)</a>
+            <a class="cert-btn" href="https://t.me/UZU59" target="_blank" rel="noopener noreferrer">문의 (텔레그램)</a>
           </div>
 
           <p class="cert-hero-note">
@@ -124,10 +123,8 @@
     </details>
   </main>
 
-  <!-- copy toast -->
   <div id="copyToast" aria-live="polite">가입코드가 복사되었습니다</div>
 
-  <!-- popup -->
   <div class="popup" id="cardPopup" role="dialog" aria-modal="true" aria-hidden="true">
     <div class="popup-box" role="document">
       <button class="popup-close" id="closeBtn" aria-label="닫기">✕</button>
@@ -141,8 +138,8 @@
 
       <div class="popup-actions">
         <button class="btn" id="copyBtn">코드 복사</button>
-        <a class="btn primary" id="pLink" data-no-auto-outbound="1" data-outbound-manual="1" href="#" target="_blank" rel="noopener">사이트 이동</a>
-        <a class="btn" id="pTelegram" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" target="_blank" rel="noopener">문의 (텔레그램)</a>
+        <a class="btn primary" id="pLink" data-no-auto-outbound="1" data-outbound-manual="1" href="#" target="_blank" rel="noopener noreferrer">사이트 이동</a>
+        <a class="btn" id="pTelegram" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" target="_blank" rel="noopener noreferrer">문의 (텔레그램)</a>
         <button class="btn" id="favBtn">☆ 즐겨찾기</button>
       </div>
     </div>
@@ -158,6 +155,6 @@
     "description":"안전한 토토사이트 선택을 돕는 인증사이트 모음. 가입코드/혜택/주의사항을 한 화면에서 확인하고, 즐겨찾기와 최근 기록으로 빠르게 재방문하세요."
   }
   </script>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
