--- a/landing-c/index.html
+++ b/landing-c/index.html
@@ -15,7 +15,7 @@
 <meta content="https://88st.cloud/landing-c/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<!-- GA4 -->
+
 <style>
 
 *{box-sizing:border-box;}
@@ -154,8 +154,6 @@ a{color:inherit;text-decoration:none;}
 }
 .smallLinks a:hover{color:var(--gold2); border-color:var(--gold2);}
 
-
-
 /* 88 logo spotlight */
 .logoImg, .logo-img{
   width:min(170px,52vw) !important;
@@ -289,9 +287,9 @@ a{ color:inherit; }
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-x="x29PmuYIN0hg">메인</a>
-<a data-utm="1" href="/analysis/" data-x="xIPxlwbI0YXU">분석기</a>
-<a data-utm="1" href="/cert/" data-x="xp9sVEm7_e-k">인증놀이터</a>
+<a data-utm="1" href="/" data-d8593ac4d="VVlZE1MNTL82">메인</a>
+<a data-utm="1" href="/analysis/" data-d8593ac4d="IQUWUhOYKhO-">분석기</a>
+<a data-utm="1" href="/cert/" data-d8593ac4d="gW_o8eCDzzXf">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -301,10 +299,10 @@ a{ color:inherit; }
 <div class="pill">마진(오버라운드)</div><div class="pill">EV(+EV)</div><div class="pill">2-way/3-way</div><div class="pill">무료 계산</div><div class="pill">라인 비교</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-x="x4zi2N5yB2sE">
+<a class="btn primary" data-utm="1" href="/analysis/" data-d8593ac4d="s9pWmjDKIfIq">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-x="xCOe7pe2jErQ">
+<a class="btn secondary" data-utm="1" href="/cert/" data-d8593ac4d="LF6LzB80w3-c">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -341,10 +339,10 @@ a{ color:inherit; }
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-x="xUJjAtSTOPPk">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-x="xqZn28OfwkCQ">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-x="xTn9flWyvi9Q">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-x="x4yYgLvEP6cE">배당 흐름</a>
+<a data-utm="1" href="/landing-a/" data-d8593ac4d="WwoscFn_6d5t">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" data-d8593ac4d="HeNiuBH6qdIz">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" data-d8593ac4d="m22e10u_2S1e">마진·EV</a>
+<a data-utm="1" href="/landing-d/" data-d8593ac4d="J6mE9f29a2tJ">배당 흐름</a>
 </div>
 </div>
 </div><style>
@@ -357,6 +355,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
