--- a/landing-d/index.html
+++ b/landing-d/index.html
@@ -15,7 +15,7 @@
 <meta content="https://88st.cloud/landing-d/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<!-- GA4 -->
+
 <style>
 
 *{box-sizing:border-box;}
@@ -154,8 +154,6 @@ a{color:inherit;text-decoration:none;}
 }
 .smallLinks a:hover{color:var(--gold2); border-color:var(--gold2);}
 
-
-
 /* 88 logo spotlight */
 .logoImg, .logo-img{
   width:min(170px,52vw) !important;
@@ -289,9 +287,9 @@ a{ color:inherit; }
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-x="xvAPcOs_XAtc">메인</a>
-<a data-utm="1" href="/analysis/" data-x="xNdMkuU-LYXk">분석기</a>
-<a data-utm="1" href="/cert/" data-x="x9agrTnJVM8g">인증놀이터</a>
+<a data-utm="1" href="/" data-d8593ac4d="Mz9IqhWdsdoi">메인</a>
+<a data-utm="1" href="/analysis/" data-d8593ac4d="4RuzD6UvvJRS">분석기</a>
+<a data-utm="1" href="/cert/" data-d8593ac4d="SrsTweK_40g4">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -301,10 +299,10 @@ a{ color:inherit; }
 <div class="pill">라인 변동</div><div class="pill">급변 구간</div><div class="pill">시장 과열</div><div class="pill">마진 변화</div><div class="pill">분석기 연동</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-x="xlwZ8kKfE8mY">
+<a class="btn primary" data-utm="1" href="/analysis/" data-d8593ac4d="vXumP_qzKrnD">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-x="xxvGpRJ1N18o">
+<a class="btn secondary" data-utm="1" href="/cert/" data-d8593ac4d="O-XwIvkr2SZn">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -341,10 +339,10 @@ a{ color:inherit; }
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-x="xTSifWonMBzk">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-x="xKmMjt8h8lq0">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-x="x5uuzDfrGXKc">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-x="xKXBfTeDZU54">배당 흐름</a>
+<a data-utm="1" href="/landing-a/" data-d8593ac4d="Uq9I1mdJQz1G">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" data-d8593ac4d="gAm9TfF-XNPt">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" data-d8593ac4d="fTkFAzT6rzon">마진·EV</a>
+<a data-utm="1" href="/landing-d/" data-d8593ac4d="VX2l1qAw4WQA">배당 흐름</a>
 </div>
 </div>
 </div><style>
@@ -357,6 +355,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
