--- a/landing-e/index.html
+++ b/landing-e/index.html
@@ -125,7 +125,7 @@
 </head>
 <body>
   <div class="st-landing-wrap">
-    <!-- 전체 이미지 클릭 시: 스피드벳 코드 자동 기입 (원하면 링크만 바꾸면 됨) -->
+
     <a class="st-landing-cover" href="http://spd-7575.com/?code=88ST" aria-label="클릭하면 사이트로 이동">
       <img src="/img/img99.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
       <div class="st-landing-overlay" aria-hidden="true"></div>
@@ -137,13 +137,13 @@
     </a>
   </div>
 
-  <a class="st-tg-fab" href="https://t.me/UZU59" target="_blank" rel="noopener" aria-label="텔레그램 상담 문의">
+  <a class="st-tg-fab" href="https://t.me/UZU59" target="_blank" rel="noopener noreferrer" aria-label="텔레그램 상담 문의">
     <span class="st-tg-dot" aria-hidden="true"></span>
     텔레그램 상담문의
   </a>
 
   <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
   <script defer src="/assets/js/88st-tool-history.js?v=VIP4_20260214_17"></script>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
