--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -308,7 +308,6 @@
       .tools{ grid-template-columns: repeat(2, minmax(0,1fr)); }
       .hero h1{ font-size: 24px; }
     }
-  
 
 /* 88 logo spotlight */
 .logoImg, .logo-img{
@@ -476,6 +475,6 @@
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
