--- a/casino-strategy/fibonacci/index.html
+++ b/casino-strategy/fibonacci/index.html
@@ -18,7 +18,6 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
-
   <link rel="stylesheet" href="/assets/88st-shell.css?v=VIP4_20260214_17"/>
   <link rel="stylesheet" href="/assets/88st-theme.css?v=VIP4_20260214_17"/>
   <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
@@ -98,6 +97,6 @@
       </section>
     </div>
   </main>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
