--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -152,7 +152,7 @@ a{ color:inherit; }
 </div>
 <div class="footer">
     ※ 본 페이지는 참고용 안내입니다. 손실을 감당 가능한 범위 내에서 이용하세요.<br/>
-    문의: <a href="https://t.me/UZU59" rel="noopener" style="color:#45b3ff;text-decoration:none;font-weight:900" target="_blank">@UZU59</a>
+    문의: <a href="https://t.me/UZU59" rel="noopener noreferrer" style="color:#45b3ff;text-decoration:none;font-weight:900" target="_blank">@UZU59</a>
 </div>
 </div>
 <script src="../assets/js/inline-bundles/b.dff6980afd.js"></script><style>
@@ -165,6 +165,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
