--- a/landing-a/index.html
+++ b/landing-a/index.html
@@ -15,7 +15,7 @@
 <meta content="https://88st.cloud/landing-a/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<!-- GA4 -->
+
 <style>
 
 *{box-sizing:border-box;}
@@ -154,8 +154,6 @@ a{color:inherit;text-decoration:none;}
 }
 .smallLinks a:hover{color:var(--gold2); border-color:var(--gold2);}
 
-
-
 /* 88 logo spotlight */
 .logoImg, .logo-img{
   width:min(170px,52vw) !important;
@@ -289,9 +287,9 @@ a{ color:inherit; }
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-x="xg5BLrE4oIUs">메인</a>
-<a data-utm="1" href="/analysis/" data-x="xYdD6Y50EvaY">분석기</a>
-<a data-utm="1" href="/cert/" data-x="xnsmIcsCPPE4">인증놀이터</a>
+<a data-utm="1" href="/" data-d8593ac4d="s2GfXHFFt66a">메인</a>
+<a data-utm="1" href="/analysis/" data-d8593ac4d="NooqBvHACmNU">분석기</a>
+<a data-utm="1" href="/cert/" data-d8593ac4d="Ps5sZBjVewop">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -301,10 +299,10 @@ a{ color:inherit; }
 <div class="pill">입플/보너스</div><div class="pill">페이백</div><div class="pill">고액 유저 기준</div><div class="pill">무료/초간단</div><div class="pill">조건 확인</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-x="xCuKYfeaHMtw">
+<a class="btn primary" data-utm="1" href="/analysis/" data-d8593ac4d="2Mf2icfxH39g">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-x="x9mOa3NN6c28">
+<a class="btn secondary" data-utm="1" href="/cert/" data-d8593ac4d="ZDwzR28v2tl7">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -341,10 +339,10 @@ a{ color:inherit; }
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-x="xV28UMrE1TGs">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-x="xbw8sJKRDNK4">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-x="x4CL_8KzW_Ow">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-x="x20-nj9b0KWA">배당 흐름</a>
+<a data-utm="1" href="/landing-a/" data-d8593ac4d="0Cb_wGqVSWM0">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" data-d8593ac4d="M2tqoQKkVtzd">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" data-d8593ac4d="VRuHYPCwbUa9">마진·EV</a>
+<a data-utm="1" href="/landing-d/" data-d8593ac4d="xV-XOhoSeUB5">배당 흐름</a>
 </div>
 </div>
 </div><style>
@@ -357,6 +355,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
