--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
-<!-- 88 MAIN LUXE v13.1 (v12 기능 유지) -->
-<!-- ===== SEO 기본 세팅 ===== -->
+
 <title>88st.cloud | 스포츠 배당 분석기 · 미니게임 · 카지노 전략 · 슬롯 환수율(RTP) 분석기 · 마진/EV · 먹튀검증 안전놀이터</title>
 <meta content="88 — 스포츠 배당/마진(EV 포함) 분석기, 미니게임 분석기, 카지노 전략 분석기, 슬롯(RTP·변동성) 분석기를 한 곳에서. 인증/보증 정보와 함께 빠르게 확인하세요." name="description"/>
 <meta content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기, 슬롯 환수율(RTP) 분석기, 슬롯 분석기, 슬롯 RTP, 슬롯 변동성" name="keywords">
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
-<!-- SNS 공유 -->
+
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
 <meta content="88 | 스포츠 배당·마진/EV · 카지노 전략 · 미니게임 · 슬롯 환수율(RTP) 분석기" property="og:title"/>
@@ -19,7 +18,7 @@
 <meta content="https://88st.cloud/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<!-- ===== GA4 (원하면 ID만 교체) ===== -->
+
 <style>
 *,
 *::before,
@@ -57,7 +56,6 @@ body{
 
 body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
 
-
 .notice-bar{
   position:sticky;
   top:0;
@@ -73,7 +71,6 @@ body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
 .notice-bar a{ color:#000; text-decoration:none; }
 
 /* loader removed */
-
 
 .header{ text-align:center; padding:18px 0 8px; }
 .header .logoLink{ display:inline-flex; align-items:center; justify-content:center; text-decoration:none; }
@@ -111,7 +108,6 @@ body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
 .section-header .title{ margin-bottom:0; }
 .btn-mini{ padding:8px 10px !important; font-size:12px; border-radius:12px; }
 .mini-note{ color:#9a9a9a; font-size:12px; font-weight:800; padding:0 2px; }
-
 
 .two-col{ display:grid; gap:14px; }
 @media(min-width:980px){ .two-col{ grid-template-columns: 1fr 1fr; align-items:stretch; } }
@@ -496,7 +492,6 @@ select.insight-select{
 .desc{ margin-top:6px; font-size:12px; color:#bdbdbd; line-height:1.35; min-height:32px; }
 .code{ margin-top:8px; font-size:12px; color:var(--gold2); font-weight:900; }
 
-
 .popup{
   position:fixed;
   inset:0;
@@ -601,7 +596,6 @@ select.insight-select{
   .card, .analyze-btn, .v-chip{ transition:none !important; }
 }
 
-
 /* ===== 카드 액션(공유) ===== */
 .card-actions{
   display:flex;
@@ -703,7 +697,6 @@ select.insight-select{
 .small-btn:hover{ filter:brightness(1.08); border-color:var(--muted-2); }
 .small-btn:active{ transform: translateY(1px); }
 .note-mini{ color:var(--muted); font-size:12px; padding:0 14px 14px; line-height:1.35; }
-
 
 /* ==== UI patch v3 (2026-02-05): glass notice bar, benefit chips, mobile compact controls ==== */
 
@@ -901,8 +894,6 @@ select.insight-select{
 @media (min-width:561px){
   .v-compact{ display:none !important; }
 }
-
-
 
 /* ==== UI patch v4 (2026-02-07): premium midnight + two-card hero ==== */
 :root{
@@ -1142,7 +1133,6 @@ body::after{
 }
 .vendor-tools::before{ opacity:.75; }
 
-
 /* ===== v13.1 polish (premium & less-blue) ===== */
 
 /* 1) remove all "TODAY/MAIN/CHECK..." badges in section titles */
@@ -1247,7 +1237,6 @@ body::after{
   background: linear-gradient(180deg, rgba(0,0,0,.02), rgba(0,0,0,.74)) !important;
 }
 
-
 /* ===== Popup CTA 3-tier (v13.1 final) ===== */
 .popup-cta{
   display:flex;
@@ -1289,8 +1278,6 @@ body::after{
   filter: brightness(1.06);
 }
 
-
-
 /* ===== quick memo (fills right column after guide/log removal) ===== */
 .memo-area{
   width:100%;
@@ -1322,8 +1309,6 @@ body::after{
   color:#e6e6e6;
   box-shadow:none;
 }
-
-
 
 /* ===== Risk Calc (v13.1) ===== */
 .chip-row{
@@ -1383,8 +1368,6 @@ body::after{
 .fab a:active{
   transform: translateY(0px) scale(.99);
 }
-
-
 
 /* v13.1 combo: insight + memo */
 .section-divider{height:1px; background:rgba(255,255,255,.08); margin:12px 0;}
@@ -1710,7 +1693,7 @@ body::after{
 <div class="sub">배당을 숫자로 정리하는 가장 빠른 분석기</div>
 </div>
 <div class="section-wrap">
-<!-- 메인 루트: 분석기 사용 -->
+
 <div class="section" id="analyzerSection">
 <div class="title"><span class="badge">MAIN</span>분석기 바로가기</div>
 <div class="cta-row">
@@ -1860,8 +1843,6 @@ body::after{
 <a data-cta="seo_analysis" href="/analysis/">분석기 메인</a></div>
 </div>
 
-
-
-</div><script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+</div><script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
