--- a/index_fixed.html
+++ b/index_fixed.html
@@ -5,13 +5,12 @@
 <meta content="배당 구조(정규확률·공정배당·오버라운드)와 손실 한도/고정 비중을 빠르게 계산하고, 결과를 바탕으로 보증·인증 업체 카드를 비교해 보세요." name="description"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
-<!-- 88 MAIN LUXE v13.1 (v12 기능 유지) -->
-<!-- ===== SEO 기본 세팅 ===== -->
+
 <title>88st.cloud | 배당 구조 분석기 · 리스크 관리 · 보증 업체</title>
 <meta content="88 — 스포츠 배당 분석기와 배당 마진(오버라운드) 계산기를 무료로 제공합니다. 분석기 사용 안내와 인증 놀이터 정보를 한 곳에서 확인하세요." name="description"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots">
-<!-- SNS 공유 -->
+
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
 <meta content="88 | 스포츠 배당 분석기 · 배당 마진 계산기 · 인증 놀이터" property="og:title"/>
@@ -19,7 +18,7 @@
 <meta content="https://88st.cloud/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<!-- ===== GA4 (원하면 ID만 교체) ===== -->
+
 <style>
 *,
 *::before,
@@ -58,7 +57,6 @@ body{
   color:var(--text);
 }
 body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
-
 
 .notice-bar{
   position:sticky;
@@ -132,7 +130,6 @@ body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
 .section-header .title{ margin-bottom:0; }
 .btn-mini{ padding:8px 10px !important; font-size:12px; border-radius:12px; }
 .mini-note{ color:#9a9a9a; font-size:12px; font-weight:800; padding:0 2px; }
-
 
 .two-col{ display:grid; gap:14px; }
 @media(min-width:980px){ .two-col{ grid-template-columns: 1fr 1fr; align-items:stretch; } }
@@ -517,7 +514,6 @@ select.insight-select{
 .desc{ margin-top:6px; font-size:12px; color:#bdbdbd; line-height:1.35; min-height:32px; }
 .code{ margin-top:8px; font-size:12px; color:var(--gold2); font-weight:900; }
 
-
 .popup{
   position:fixed;
   inset:0;
@@ -622,7 +618,6 @@ select.insight-select{
   .card, .analyze-btn, .v-chip{ transition:none !important; }
 }
 
-
 /* ===== 카드 액션(공유) ===== */
 .card-actions{
   display:flex;
@@ -724,7 +719,6 @@ select.insight-select{
 .small-btn:hover{ filter:brightness(1.08); border-color:var(--muted-2); }
 .small-btn:active{ transform: translateY(1px); }
 .note-mini{ color:var(--muted); font-size:12px; padding:0 14px 14px; line-height:1.35; }
-
 
 /* ==== UI patch v3 (2026-02-05): glass notice bar, benefit chips, mobile compact controls ==== */
 
@@ -922,8 +916,6 @@ select.insight-select{
 @media (min-width:561px){
   .v-compact{ display:none !important; }
 }
-
-
 
 /* ==== UI patch v4 (2026-02-07): premium midnight + two-card hero ==== */
 :root{
@@ -1163,7 +1155,6 @@ body::after{
 }
 .vendor-tools::before{ opacity:.75; }
 
-
 /* ===== v13.1 polish (premium & less-blue) ===== */
 
 /* 1) remove all "TODAY/MAIN/CHECK..." badges in section titles */
@@ -1262,7 +1253,6 @@ body::after{
   background: linear-gradient(180deg, rgba(0,0,0,.02), rgba(0,0,0,.74)) !important;
 }
 
-
 /* ===== Popup CTA 3-tier (v13.1 final) ===== */
 .popup-cta{
   display:flex;
@@ -1304,8 +1294,6 @@ body::after{
   filter: brightness(1.06);
 }
 
-
-
 /* ===== quick memo (fills right column after guide/log removal) ===== */
 .memo-area{
   width:100%;
@@ -1337,8 +1325,6 @@ body::after{
   color:#e6e6e6;
   box-shadow:none;
 }
-
-
 
 /* ===== Risk Calc (v13.1) ===== */
 .chip-row{
@@ -1398,8 +1384,6 @@ body::after{
 .fab a:active{
   transform: translateY(0px) scale(.99);
 }
-
-
 
 /* v13.1 combo: insight + memo */
 .section-divider{height:1px; background:rgba(255,255,255,.08); margin:12px 0;}
@@ -1723,7 +1707,7 @@ body::after{
       그 외 계정은 사칭일 수 있으니<br/>
       반드시 주의해 주세요.
     </p>
-<div class="btn" data-x="xYNKds7BgUb4">확인</div>
+<div class="btn" data-d8593ac4d="VQkTbQtZrbr_">확인</div>
 </div>
 </div>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -1734,7 +1718,7 @@ body::after{
 <div class="sub"> </div>
 </div>
 <div class="section-wrap">
-<!-- 메인 루트: 분석기 사용 -->
+
 <div class="section" id="analyzerSection">
 <div class="title"><span class="badge">MAIN</span>스포츠 배당 분석기</div>
 <div class='\"cta-row\"'>
@@ -1779,8 +1763,8 @@ body::after{
 <div class="mini-note">전종목 카테고리 선택형</div>
 </div>
 <div aria-label="마진 계산기 유형" class="seg-row" role="tablist">
-<button class="seg active" id="mMode2" data-x="xZD1J0Xx4obI" type="button">2-way (홈/원정)</button>
-<button class="seg" id="mMode3" data-x="x17UrPD1jsdM" type="button">3-way (홈/무/원정)</button>
+<button class="seg active" id="mMode2" data-d8593ac4d="jWM8nBnC-0mO" type="button">2-way (홈/원정)</button>
+<button class="seg" id="mMode3" data-d8593ac4d="aNFy749pDwb4" type="button">3-way (홈/무/원정)</button>
 </div>
 <div id="margin2" style="display:block;">
 <div style="display:grid; gap:10px;">
@@ -1795,7 +1779,7 @@ body::after{
 <input id="m3A" inputmode="decimal" placeholder="원정 배당 (예: 4.20)"/>
 </div>
 </div>
-<button class="insight-btn" data-x="xFEDIDgRZAEQ" style="margin-top:10px;" type="button">분석 실행</button>
+<button class="insight-btn" data-d8593ac4d="0H0grENIOs7p" style="margin-top:10px;" type="button">분석 실행</button>
 <div aria-live="polite" class="odds-summary-card" id="oddsSummaryCard">
 <div class="odds-summary-row">
 <div class="odds-metric">
@@ -1843,7 +1827,7 @@ body::after{
 <option value="e스포츠">e스포츠</option>
 <option value="하키">하키</option>
 </select>
-<button class="insight-btn" data-x="xv0USkcd-xUg" type="button">인사이트 새로고침</button>
+<button class="insight-btn" data-d8593ac4d="iKifWWFgMkBk" type="button">인사이트 새로고침</button>
 </div>
 <div class="text im-note">
         ※ 종목 선택은 참고용이며, 실제 결과를 보장하지 않습니다.
@@ -1882,12 +1866,12 @@ body::after{
 <div class="section" id="riskCalcSection">
 <div class="title"><span class="badge">RISK</span>리스크 관리 계산기</div>
 <div class="text" style="margin-bottom:10px;">
-     손실 한도 · 고정 비중 · 보수 켈리로 <b>과몰입을 줄이는</b> 참고 계산기입니다. 
+     손실 한도 · 고정 비중 · 보수 켈리로 <b>과몰입을 줄이는</b> 참고 계산기입니다.
     </div>
 <div aria-label="리스크 관리 계산기 유형" class="seg-row" role="tablist">
-<button class="seg active" id="rModeStop" data-x="xcQZW9wNzNPo" type="button">손실 한도</button>
-<button class="seg" id="rModeFixed" data-x="xEYuRqDX4pEs" type="button">고정 비중</button>
-<button class="seg" id="rModeKelly" data-x="xoR6RKWgDvoM" type="button">보수 켈리</button>
+<button class="seg active" id="rModeStop" data-d8593ac4d="N6OZzYAvu-t9" type="button">손실 한도</button>
+<button class="seg" id="rModeFixed" data-d8593ac4d="t0VHvZmh_o-y" type="button">고정 비중</button>
+<button class="seg" id="rModeKelly" data-d8593ac4d="WUPsF7OA0knG" type="button">보수 켈리</button>
 </div>
 <div id="riskStop" style="display:block; margin-top:10px;">
 <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
@@ -1900,7 +1884,7 @@ body::after{
 <input id="rStopPct" inputmode="decimal" placeholder="중단 트리거 % (예: 80)"/>
 </div>
 </div>
-<button class="insight-btn" data-x="x26LViwnXPmU" style="margin-top:10px;" type="button">손실 한도 계산</button>
+<button class="insight-btn" data-d8593ac4d="xbjFWRg4iG5h" style="margin-top:10px;" type="button">손실 한도 계산</button>
 <div class="text" id="riskStopOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
 <div class="text" id="riskStopHint" style="color:#bdbdbd;font-size:12px;"></div>
 </div>
@@ -1912,14 +1896,14 @@ body::after{
 <input id="rBankroll2" inputmode="decimal" placeholder="총 자본 (예: 1000000)"/>
 <input id="rStakePct" inputmode="decimal" placeholder="베팅 비중 % (예: 1.5)"/>
 <div aria-label="비중 프리셋" class="chip-row">
-<button class="chip" data-x="xsgS5CeIAKpM" type="button">0.5%</button>
-<button class="chip" data-x="xAkReKD33EYw" type="button">1%</button>
-<button class="chip" data-x="xHyrBpAzf3XA" type="button">1.5%</button>
-<button class="chip" data-x="xRoHMLki2Re8" type="button">2%</button>
-<button class="chip" data-x="xCijO0LSPZq0" type="button">3%</button>
+<button class="chip" data-d8593ac4d="oyHPpo3daUwP" type="button">0.5%</button>
+<button class="chip" data-d8593ac4d="f8iw1RaRJ7ul" type="button">1%</button>
+<button class="chip" data-d8593ac4d="WLl9CwH0fFv5" type="button">1.5%</button>
+<button class="chip" data-d8593ac4d="xbGOwXOaQIda" type="button">2%</button>
+<button class="chip" data-d8593ac4d="PVLld0aakDXE" type="button">3%</button>
 </div>
 </div>
-<button class="insight-btn" data-x="xrNxUOWF19BE" style="margin-top:10px;" type="button">고정 비중 계산</button>
+<button class="insight-btn" data-d8593ac4d="mtmHHrCkX4Iv" style="margin-top:10px;" type="button">고정 비중 계산</button>
 <div class="text" id="riskFixedOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
 <div class="text" id="riskFixedHint" style="color:#bdbdbd;font-size:12px;"></div>
 </div>
@@ -1938,14 +1922,14 @@ body::after{
 <input id="rMaxPct" inputmode="decimal" placeholder="최대 상한 % (예: 3)"/>
 </div>
 </div>
-<button class="insight-btn" data-x="xp2E6sPzLe7s" style="margin-top:10px;" type="button">보수 켈리 계산</button>
+<button class="insight-btn" data-d8593ac4d="OhLw2uCAQEcg" style="margin-top:10px;" type="button">보수 켈리 계산</button>
 <div class="text" id="riskKellyOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
 <div class="text" id="riskKellyHint" style="color:#bdbdbd;font-size:12px;"></div>
 </div>
 </div><div class="section" id="checklistSection">
 <div class="section-header">
 <div class="title"><span class="badge">CHECK</span>배팅 전 체크리스트</div>
-<button class="insight-btn secondary btn-mini" data-x="x-7d2-Leb6jg" type="button">새로고침</button>
+<button class="insight-btn secondary btn-mini" data-d8593ac4d="lxIc58uN6Zu-" type="button">새로고침</button>
 </div>
 <div class="text" id="checklistText"></div>
 <div class="session-plan" id="sessionPlanBox">
@@ -2086,8 +2070,8 @@ body::after{
 <p id="pNotice" style="color:#ff6b6b;font-size:12px;margin:8px 0 0;"></p>
 <div aria-label="주요 액션" class="popup-cta">
 <div class="btn copy secondary" id="copyBtn" role="button" tabindex="0">가입코드 복사</div>
-<a class="btn go primary" data-no-auto-outbound="1" id="pLink" rel="noopener" target="_blank">사이트 이동</a>
-<a class="btn copy ghost" data-no-auto-outbound="1" id="pTelegram" rel="noopener" target="_blank">문의 (텔레그램)</a>
+<a class="btn go primary" data-no-auto-outbound="1" id="pLink" rel="noopener noreferrer" target="_blank">사이트 이동</a>
+<a class="btn copy ghost" data-no-auto-outbound="1" id="pTelegram" rel="noopener noreferrer" target="_blank">문의 (텔레그램)</a>
 </div>
 <div aria-label="보조 액션" class="popup-aux">
 <div class="btn copy ghost" id="favBtn" role="button" tabindex="0">☆ 즐겨찾기</div>
@@ -2229,8 +2213,6 @@ body::after{
 <a class="secondary" data-cta="fab_vendors" href="#vendorTop">놀이터</a>
 </div>
 
-
-
-</div><script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+</div><script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
