--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -21,7 +21,7 @@
 <link href="/assets/88st-shell.css?v=VIP4_20260214_17" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
 <script defer="" src="/assets/js/88st-casino-strategies.js?v=VIP4_20260214_17"></script>
-<!-- GA4 (Casino Stream) -->
+
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
 <script defer="" src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
 <script type="application/ld+json">
@@ -85,7 +85,7 @@
 </div>
 </div>
 <div aria-label="전략 옵션" class="cs-adv" id="csStrategyOptions">
-<!-- strategy-specific options injected here -->
+
 </div>
 </section>
 <section aria-label="전략 &amp; 실행" class="cs-card">
@@ -200,6 +200,6 @@
 </div>
 </section>
 </main>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
