--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -21,7 +21,7 @@
 <link href="/assets/88st-shell.css?v=VIP4_20260214_17" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
 <script defer="" src="/assets/js/88st-minigame-analyzer.js?v=VIP4_20260214_17"></script>
-<!-- GA4 (main stream) -->
+
 <script src="../assets/js/inline-bundles/b.d7a7e748dd.js"></script>
 <script defer="" src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
 <script type="application/ld+json">
@@ -238,6 +238,6 @@
 </main>
 <div aria-atomic="true" aria-live="polite" class="mg-toast" id="mgToast"></div>
 
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
