--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -46,7 +46,7 @@ label{font-size:12px;color:var(--muted);font-weight:900;}
 input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rgba(255,255,255,.14);background:rgba(0,0,0,.28);color:var(--text);outline:none;font-weight:900;}
 .btnrow{margin-top:10px;display:flex;gap:10px;flex-wrap:wrap;}
 .btn{display:inline-flex;align-items:center;justify-content:center;padding:12px 14px;border-radius:16px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);color:var(--text);font-weight:1000;cursor:pointer;user-select:none;box-shadow:0 12px 34px rgba(0,0,0,.38);}
-.btn.primary{border-color:rgba(var(--accentRGB),.22);background:rgba(255,255,255,.08);} 
+.btn.primary{border-color:rgba(var(--accentRGB),.22);background:rgba(255,255,255,.08);}
 .kv{margin-top:10px;display:grid;grid-template-columns:1fr 1fr;gap:10px;}
 @media(max-width:720px){.kv{grid-template-columns:1fr;}}
 .kv .item{border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);border-radius:18px;padding:12px;}
@@ -154,6 +154,6 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
 <div class="small" style="margin-top:14px;opacity:.75;">※ 본 도구는 판단 보조용이며 결과/수익을 보장하지 않습니다.</div>
 </div>
 <script src="../../assets/js/inline-bundles/b.c66a197be4.js"></script>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
