--- a/tool-margin/index.html
+++ b/tool-margin/index.html
@@ -96,7 +96,6 @@ input, select{
 footer{ margin-top:16px; color:var(--muted-2); font-size:12px; line-height:1.6; }
 .small{ font-size:12px; color:var(--muted-2); }
 
-
 /* 88 logo spotlight */
 .logoImg, .logo-img{
   width:min(170px,52vw) !important;
@@ -282,7 +281,7 @@ a{ color:inherit; }
 </div>
 </div>
 <script src="../assets/js/inline-bundles/b.7aefc0698d.js"></script>
-<!-- Tool share/history config (auto UI injection) -->
+
 <script data-src="../assets/config/toolconfig/c.8ad1622c66.json" id="__88stToolConfig" type="application/json"></script>
 <div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
 <div class="vt-head">
@@ -339,6 +338,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
