--- a/tool/ev/index.html
+++ b/tool/ev/index.html
@@ -96,7 +96,6 @@ input, select{
 footer{ margin-top:16px; color:var(--muted-2); font-size:12px; line-height:1.6; }
 .small{ font-size:12px; color:var(--muted-2); }
 
-
 /* 88 logo spotlight */
 .logoImg, .logo-img{
   width:min(170px,52vw) !important;
@@ -331,6 +330,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
+<script src="/assets/js/p.025d649c8b.js" defer></script>
 </body>
 </html>
